# drawover

./: .gitignore  AGENT.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  gen_logo.py  package.json  svelte.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cla.yml  release.yml
logo-concepts/: make_icons.py  make_transparent.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: drawing.rs  lib.rs  main.rs
src/lib/: Toolbar.svelte  stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
